@@ -38,6 +38,7 @@ stralloc_cat.o
 stralloc_catb.o
 stralloc_cats.o
 stralloc_eady.o
+stralloc_opy.o
 stralloc_opyb.o
 stralloc_opys.o
 stralloc_pend.o
